# job-hunter

./: CLAUDE.md  README.md  main.py  pyproject.toml  start
data/: job_applications.db  user_preferences.json
data/templates/: resume_template.md
src/: __init__.py  export_manager.py  main.py  workflow_orchestrator.py
src/ai_processing/: __init__.py  job_filter.py  llm_manager.py  resume_customizer.py
src/config/: __init__.py  database.py  settings.py
src/contact_finder/: __init__.py
src/document_manager/: __init__.py  document_manager.py  resume_handler.py
src/email_composer/: __init__.py
src/scrapers/: __init__.py  linkedin_scraper.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  configuration.py  dashboard.py  email_preview.py  job_review.py  resume_manager.py  system_status.py
src/ui/utils/: session.py  styling.py
src/utils/: __init__.py  logger.py  rate_limiter.py
